# eda

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
ai/: README.md
ai/scripts/: gen_tree.sh  pip-installs.sh  pip-upgrade.sh
ai/src/: ai_artist.py  ai_crawler.py  pn_gui.py  qrc_resources.py  qt_gui.py  resources.qrc
ai/src/cache/: extracted_data.full.json  hacked.json  htmldocs.full.json
ai/src/crawler/: ai_crawler.py  infogram_loader.py  main.py
ai/src/crawler/cache/: htmldocs.small.json
ai/src/crawler/doc/: ai_crawler.drawio  ai_crawler.pptx
ai/src/crawler/output/: extracted_data.json  htmldocs.json  infogram_groups.html  infograms.html  response.json
ai/src/output/: extracted_data.json  htmldocs_str.json
ai/src/samples/: ai_sample.py  ai_selenium.py  infogram.py
ai/test/designs/dual_port_ram/project/: dual_port_ram.qpf  dual_port_ram.qsf
ai/test/designs/dual_port_ram/src/: dual_port_ram.sdc  dual_port_ram.v
algo/: CMakeLists.txt
algo/include/: funcadapter.h  navigator.h  navigatorbase.h  navigatornode.h
algo/test/: CMakeLists.txt  test.cpp
cmn/: CMakeLists.txt
cmn/include/: common.h
doc/architecture/: eCADArch-eCAD.vsdx  eCADArch.drawio  eCADArch.pptx  eCADArch.vsd  eCADGUI.vsd  eCADModeling.drawio  eCADOverall.drawio
jsoncpp/: CMakeLists.txt
jsoncpp/interface/: config.i  value.i  writer.i
linux/: CMakeLists.txt  build.sh  eda.code-workspace
rack/: CMakeLists.txt
rack/include/: blackbox.h  cell.h  classnametag.h  componentbase.h  connectorbase.h  design.h  devicebase.h  diode.h  diodebase.h  entitybase.h  exceptions.h  hdl.h  instance.h  instancebase.h  interconnectbase.h  library.h  librarybase.h  linkpin.h  linkpinbase.h  locator.h  module.h  modulebase.h  namedentitybase.h  net.h  netbase.h  netlist.h  nonroute.h  physical.h  pin.h  pinbase.h  port.h  portbase.h  rack.h  rackfwd.h  rackinc.h  racksys.h  racktypes.h  referencebase.h  route.h  routebase.h  (+17 more)
rack/swig/: CMakeLists.txt  rack_int.i  test.py  test.tcl
rack/test/: CMakeLists.txt  test.cpp
scripts/: build.sh
sig/: CMakeLists.txt
sig/include/: sighand.h
sig/src/: CMakeLists.txt  sighand.cpp
sig/test/: CMakeLists.txt  test.cpp
stl/: CMakeLists.txt
stl/interface/: bitset.i  multimap.i  pair.i  string.i  unordered_map.i  unordered_set.i  vector.i
tmat/: CMakeLists.txt
tmat/doc/: trm.m
tmat/include/: trm.h
tmat/src/: CMakeLists.txt  trm.cpp  utl.cpp
tmat/swig/: CMakeLists.txt  test.py  tmat_int.i
tmat/test/: CMakeLists.txt  test.cpp
utl/: CMakeLists.txt
utl/include/: classnametagbase.h  dictionary.h  dump.h  except.h  message.h  multistring.h
utl/swig/: CMakeLists.txt  debug.py  test.cpp  test.py  utl_int.i
utl/test/: CMakeLists.txt  test.cpp
